feat:support promtail, logstash, filebeat

--- a/common/protocol_parser/Cargo.toml
+++ b/common/protocol_parser/Cargo.toml
@@ -23,6 +23,7 @@ async-backtrace = { workspace = true, optional = true }
 lazy_static = { workspace = true }
 parking_lot = { workspace = true }
 datafusion = { workspace = true }
+prost ={ workspace = true }
 
 [features]
 default = []
