--- a/.github/workflows/community-tag_docker_build_and_push.yml
+++ b/.github/workflows/community-tag_docker_build_and_push.yml
@@ -67,7 +67,7 @@ jobs:
       -
         name: Compiler
         run: |
-          rustup target add aarch64-unknown-linux-gnu x86_64-unknown-linux-gnu
+          rustup target add aarch64-unknown-linux-gnu
           mkdir -p linux/amd64 linux/arm64
           if [[ "${{ matrix.version }}" = "release" ]] && [[ "${{ matrix.image }}" = "cnosdb" ]]; then
             cargo zigbuild --package main --package client --release --target aarch64-unknown-linux-gnu --target x86_64-unknown-linux-gnu
